[gd_scene load_steps=25 format=3 uid="uid://drx8e4npnl3il"]

[ext_resource type="Script" uid="uid://cjruy0e7k5n74" path="res://escenas/main_menu.gd" id="1_2cr0s"]
[ext_resource type="FontFile" uid="uid://ciwhe1apfc5gi" path="res://assets/fonts/Balgruf.otf" id="1_ter2f"]
[ext_resource type="Texture2D" uid="uid://bi5n023nx1e1n" path="res://assets/sprites/bosquepocho3.png" id="2_2vsao"]
[ext_resource type="PackedScene" uid="uid://d2xlg26hl7ug6" path="res://escenas/boton_custom.tscn" id="2_8cfpu"]
[ext_resource type="Texture2D" uid="uid://t7pvqbwf3crw" path="res://assets/sprites/Parallaxprueba.png" id="3_bm2sk"]
[ext_resource type="Gradient" uid="uid://b4xgyyw4wdl42" path="res://escenas/polen.tres" id="7_2vsao"]
[ext_resource type="Texture2D" uid="uid://cbsx3brshwoh4" path="res://assets/sprites/Pantalla menú.png" id="8_nxvcq"]
[ext_resource type="PackedScene" uid="uid://ww1sbsindpl7" path="res://escenas/opciones.tscn" id="11_nxvcq"]

[sub_resource type="Animation" id="Animation_2vsao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect2:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Polygon2D/CPUParticles2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Polygon2D/CPUParticles2D:gravity")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -41.5)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Label:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(340.50018, 196)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Label:label_settings:font_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [150]
}

[sub_resource type="Animation" id="Animation_nxvcq"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(0.31864047, 0.17075527),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_tnv86"]
resource_name = "titulo"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.26666668, 1.4333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.10000001, 2.7666667, 4.233333),
"transitions": PackedFloat32Array(1, 1, 0.074325606),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect2:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.5333333, 3.4),
"transitions": PackedFloat32Array(0.2973016, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Polygon2D/CPUParticles2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 3.2333333),
"transitions": PackedFloat32Array(2.549123, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Polygon2D/CPUParticles2D:gravity")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.1666666, 3.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(50, -50), Vector2(10, -10)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Polygon2D/CPUParticles2D2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.0333333, 3.233333),
"transitions": PackedFloat32Array(2.549123, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Polygon2D/CPUParticles2D2:gravity")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.1666666, 3.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(50, -50), Vector2(10, -10)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VBoxContainer/BotonCustomComenzar:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(2.7250004, 3.3000002),
"transitions": PackedFloat32Array(1, 0.074325606),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VBoxContainer/BotonCustomCreditos:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(3.1250005, 3.7),
"transitions": PackedFloat32Array(1, 0.074325606),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VBoxContainer/BotonCustomOpciones:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(2.9250004, 3.5000005),
"transitions": PackedFloat32Array(1, 0.074325606),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Label:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(2.1999998, 3.3666666),
"transitions": PackedFloat32Array(0.17075527, 0.112656415),
"update": 0,
"values": [Vector2(340.50018, 196), Vector2(-23.995, 100)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VBoxContainer/BotonCustomSalir:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(3.3250003, 3.891667),
"transitions": PackedFloat32Array(1, 0.074325606),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Label:label_settings")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Label:label_settings:font_size")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 2.1999998, 3.3666666),
"transitions": PackedFloat32Array(1, 0.08246948, 0.062500454),
"update": 0,
"values": [500, 500, 150]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nxvcq"]
_data = {
&"RESET": SubResource("Animation_2vsao"),
&"fade_out": SubResource("Animation_nxvcq"),
&"titulo": SubResource("Animation_tnv86")
}

[sub_resource type="Gradient" id="Gradient_tnv86"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2vsao"]
gradient = SubResource("Gradient_tnv86")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8162393, 0.23931624)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tnv86"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i3g25"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bm2sk"]
gradient = ExtResource("7_2vsao")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5854701, 0.41025642)

[sub_resource type="Curve" id="Curve_2vsao"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.50240386, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cg856"]
light_mode = 1

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tnv86"]
gradient = ExtResource("7_2vsao")
width = 14
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5854701, 0.41025642)

[sub_resource type="Curve" id="Curve_tnv86"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_nxvcq"]
offsets = PackedFloat32Array(0.0025641026, 0.071794875, 0.21794872, 0.33846155, 0.53333336, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.96, 0.78928, 0.028799972, 1, 1, 0.4465, 0.19, 1, 0.61, 0, 0.030500118, 1, 0.25, 0.25, 0.25, 1, 0, 0, 0, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nxvcq"]
light_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_bm2sk"]
font_size = 150
shadow_size = 0
shadow_offset = Vector2(12.62, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2cr0s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nxvcq")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1185, -687.00006)
scale = Vector2(1.1252074, 1.1252073)
color = Color(1, 0.7019608, 0.30980393, 1)
energy = 9.11
shadow_enabled = true
texture = SubResource("GradientTexture2D_2vsao")
texture_scale = 29.63

[node name="Bosquepocho" type="TextureRect" parent="."]
modulate = Color(0.86036915, 0.8603692, 0.8603692, 1)
material = SubResource("CanvasItemMaterial_tnv86")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2vsao")

[node name="Polygon2D" type="Polygon2D" parent="."]
clip_children = 1
z_index = 3
offset = Vector2(352.5, 0)
antialiased = true
texture_offset = Vector2(0.415, 0)
texture_scale = Vector2(0.455, 0.455)
polygon = PackedVector2Array(1295, -1109, -1499, 2176, -911, 2176, 1865, -1109)

[node name="TextureRect" type="TextureRect" parent="Polygon2D"]
modulate = Color(0.65, 0.65, 0.65, 1)
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_bm2sk")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Polygon2D"]
modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_i3g25")
position = Vector2(941, 478)
scale = Vector2(1.3600006, 1.6000004)
amount = 60
texture = SubResource("GradientTexture2D_bm2sk")
lifetime = 8.0
preprocess = 10.0
use_fixed_seed = true
seed = 1392953648
emission_shape = 3
emission_rect_extents = Vector2(1000, 500)
particle_flag_align_y = true
direction = Vector2(1, -1)
gravity = Vector2(0, -41.5)
initial_velocity_min = 5.0
initial_velocity_max = 25.0
angular_velocity_min = -466.8
angular_velocity_max = 462.22
radial_accel_min = -3.0
radial_accel_max = 3.0
scale_amount_min = 0.1
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_2vsao")
color = Color(0.68991, 0.78, 0.2886, 1)
hue_variation_min = -0.11
hue_variation_max = 0.11

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Polygon2D"]
modulate = Color(1, 1, 1, 0.997347)
z_index = -1
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_cg856")
position = Vector2(941, 478)
scale = Vector2(1.3600006, 1.6000004)
amount = 60
texture = SubResource("GradientTexture2D_tnv86")
lifetime = 8.0
preprocess = 10.0
use_fixed_seed = true
seed = 1392953648
emission_shape = 3
emission_rect_extents = Vector2(1000, 500)
particle_flag_align_y = true
direction = Vector2(1, -1)
gravity = Vector2(10, -10)
initial_velocity_min = 5.0
initial_velocity_max = 25.0
radial_accel_min = -3.0
radial_accel_max = 3.0
angle_min = 129.5
angle_max = 150.0
scale_amount_min = 0.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_tnv86")
color_ramp = SubResource("Gradient_nxvcq")
hue_variation_min = -0.11
hue_variation_max = 0.11

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://assets/audio/FmodBanks/Desktop/Master.strings.bank", "res://assets/audio/FmodBanks/Desktop/Master.bank", "res://assets/audio/FmodBanks/Desktop/Ambiente.bank", "res://assets/audio/FmodBanks/Desktop/Musica.bank", "res://assets/audio/FmodBanks/Desktop/UI.bank"]

[node name="SaltoCiervo4" type="TextureRect" parent="."]
modulate = Color(0.43519226, 0.4351923, 0.43519217, 1)
z_index = 2
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_nxvcq")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1400.0
offset_top = -788.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("8_nxvcq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
light_mask = 0
z_index = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 163.0
offset_top = -337.0
offset_right = 375.0
offset_bottom = -123.0
grow_vertical = 0
theme_override_constants/separation = 14

[node name="BotonCustomComenzar" parent="VBoxContainer" instance=ExtResource("2_8cfpu")]
modulate = Color(1, 1, 1, 0.87826055)
light_mask = 0
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
theme_override_colors/font_hover_pressed_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
text = "Jugar"

[node name="BotonCustomOpciones" parent="VBoxContainer" instance=ExtResource("2_8cfpu")]
modulate = Color(1, 1, 1, 0.530434)
light_mask = 0
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
theme_override_colors/font_hover_pressed_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
text = "Opciones"

[node name="BotonCustomCreditos" parent="VBoxContainer" instance=ExtResource("2_8cfpu")]
modulate = Color(1, 1, 1, 0.18260801)
light_mask = 0
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
theme_override_colors/font_hover_pressed_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
text = "Créditos"

[node name="BotonCustomSalir" parent="VBoxContainer" instance=ExtResource("2_8cfpu")]
modulate = Color(1, 1, 1, 0)
light_mask = 0
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
theme_override_colors/font_hover_pressed_color = Color(0.11372549, 0.2627451, 0.08235294, 1)
text = "Salir"

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -619.4998
offset_top = -344.0
offset_right = 652.50024
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ter2f")
theme_override_font_sizes/font_size = 500
text = "Ningú"
label_settings = SubResource("LabelSettings_bm2sk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="."]
event_name = "event:/Musica/Musica"
event_guid = "{531f5736-0242-456e-96ac-14d316a2be4e}"
attached = false
allow_fadeout = false
volume = 0.79
fmod_parameters/Pantalla/id = -2044462831851661827
fmod_parameters/Pantalla = "Menu"
fmod_parameters/Pantalla/labels = PackedStringArray("Menu", "Juego")
fmod_parameters/Pantalla/variant_type = 4

[node name="FmodEventEmitter2D2" type="FmodEventEmitter2D" parent="."]
event_name = "event:/UI/presionar boton"
event_guid = "{624dbeb8-fca7-4437-9334-f8d63096ddf0}"
volume = 0.6

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 8
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Opciones" parent="." instance=ExtResource("11_nxvcq")]
visible = false
light_mask = 0
z_index = 50
layout_mode = 1

[node name="FmodEventEmitter2D3" type="FmodEventEmitter2D" parent="."]
event_name = "event:/UI/whoosh"
event_guid = "{c9fc4032-721c-4e9f-af71-c0a1af4a6164}"

[node name="FmodEventEmitter2D4" type="FmodEventEmitter2D" parent="."]
event_name = "event:/UI/campana"
event_guid = "{04b46346-59b4-4781-8053-6a8807fc42a4}"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="VBoxContainer/BotonCustomComenzar" to="." method="_on_boton_custom_comenzar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonCustomOpciones" to="." method="_on_boton_custom_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonCustomCreditos" to="." method="_on_boton_custom_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonCustomSalir" to="." method="_on_boton_custom_salir_pressed"]
